[package]
name = "health-scale"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11.5"
const-decoder = "0.3"
flexi_logger = "0.28.5"
futures = "0.3.30"
log = "0.4.21"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
